Fixed some whitespace due to positioning

--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,8 @@ nav {
 
     position: sticky;
     top: 0;
+    left: 0;
+    right: 0;
     
 
     background-color: #000;
@@ -98,7 +100,7 @@ nav ul {
 
     min-width: 80%;
 
-    overflow: hidden scroll;
+    overflow: hidden hidden;
 
     box-shadow: 0 0 3px 0 #000;
 
@@ -122,9 +124,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #000;
-    color: #fff;
-    border-left: 3px solid #fff;
+    border-left: 3px solid #2354dc;
 }
 
 .material-symbols-outlined {
@@ -142,6 +142,7 @@ main {
 .grid {
     margin: 1rem 0;
 }
+
 
 /* footer */
 footer {
@@ -174,7 +175,7 @@ footer span {
 .active-nav-link {
     background-color: #000;
     color: #fff;
-    border-left: 3px solid #fff;
+    border-left: 3px solid #2354dc;
 }
 
 
@@ -213,7 +214,7 @@ footer span {
 
     .menu {
         position: absolute;
-        right: 100%;
+        right: 200%;
     }
 
     nav ul {
